# tfce

./: .gitignore  CHANGES.txt  CITATION.cff  CLAUDE.md  Contents.m  Contents_info.txt  INSTALL.txt  INSTALL_info.txt  LICENSE.md  Makefile  Makefile.tfce  Makefile.var  README.md  SPM-Designs-Permutation.doc  SPM-Designs-Permutation.rtf  TFCE.fig  TFCE.txt  cat_spm_results_ui.m  cg_getTFCE.m  cg_get_tfce_results.m  cg_glm_get_Beta_ResSS.c  cg_glm_get_Beta_ResSS.mexa64  cg_glm_get_Beta_ResSS.mexglx  cg_glm_get_Beta_ResSS.mexmaci  cg_glm_get_Beta_ResSS.mexmaci64  cg_glm_get_Beta_ResSS.mexw32  cg_glm_get_Beta_ResSS.mexw64  cg_glm_get_Beta_ResSS_noopenmp.mexmaci64  cg_progress.m  cg_run_tfce_estimate.m  cg_tfce8.m  cg_tfce_estimate.m  cg_tfce_estimate_multi.m  cg_tfce_list.m  cg_tfce_results.m  cg_tfce_surf_max.m  cg_tfce_update.m  compile.m  git_ci_log  make.m  (+67 more)
.github/workflows/: compile_mex.yml  publish-pypi.yml  python_wheels.yml
c/: LICENSE  tfce_batch.h  tfce_capi.c  tfce_capi.h  tfce_maxtree.h  tfce_threads.h
html/: tfce.html  tfce.txt  tfce_FN.html  tfce_starting.html
matlab/: CHANGES.txt  Contents.m  Contents_info.txt  INSTALL.txt  README.md  cat_spm_results_ui.m  compile.m  spm_TFCE.m  tbx_cfg_tfce.m  tfceMex_maxtree.mexmaca64  tfceMex_maxtree.mexmaci64  tfceMex_maxtree_batch.c  tfceMex_maxtree_batch.m  tfceMex_maxtree_batch.mexmaca64  tfceMex_resss.mexmaca64  tfceMex_resss.mexmaci64  tfceMex_resss.mexw64  tfce_estimate_stat.m  tfce_getSPM.m  tfce_list.m  tfce_update.m
matlab/html/: tfce.html  tfce.txt
matlab/validation/: README.md  run_all.m  val_calibration.m  val_gamma.m  val_glm_fast.m  val_half_permutations.m  val_nuisance.m  val_pareto.m  val_sequential.m  val_tfce_exactness.m  val_util.m  val_voxel_covariate.m
old/: spm_datatypes.h  tfceMex_pthread.c  tfceMex_pthread.mex
python/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
python/docs/: README.md  api.md  benchmarks.md  installation.md  nilearn.md  permutation.md  theory.md  usage.md  validation.md
python/src/tfce/: __init__.py  _maxtree.pyx  core.py  glm.py  nilearn_compat.py  tails.py
python/tests/: test_core.py  test_docs.py  test_exactness.py  test_glm.py  test_matlab_parity.py  test_nilearn_compat.py  test_tails.py
python/tests/data/: matlab_reference.npz
spm/: spm_getSPM.m  spm_list.m  spm_results_ui.m
trunk/: CHANGES.txt  Makefile  SPM-Designs-Permutation.doc  TFCE.txt  cg_tfce_list.m  cg_tfce_update.m  svn_ci_log  tbx_cfg_tfce_estimate.m  tfceMex.m  tfceMex_pthread.mexa64  tfceMex_pthread.mexmaci64  tfce_mesh.m
trunk/old/: spm_make_lookup.c  spm_make_lookup.h
validation/: README.md  run_all.m  val_glm_fast.m  val_tfce_exactness.m
